<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="15sp"
            android:text="@string/nome_rede_social"
            android:textColor="@color/corPreto" />

        <EditText
            android:id="@+id/txtNomeRedeSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:hint="@string/nome_rede_social_hint"
            android:inputType="text"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="20sp"
            android:text="@string/url_rede_social"
            android:textColor="@color/corPreto" />

        <EditText
            android:id="@+id/txtEnderecoRedeSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/url_rede_social_hint"
            android:inputType="text"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cor_tab"
                    android:textColor="@color/corPreto" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnCorTab"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13sp"
                    android:gravity="center"
                    android:hint="@string/posicao_tab_hint"
                    android:text="@string/posicao_tab"
                    android:textColor="@color/corPreto" />

                <EditText
                    android:id="@+id/txtPosicaoTab"
                    android:layout_width="40sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="13sp"
                    android:hint="@string/posicao_tab_hint"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>