<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/logo_descricao"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/corPreto"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4sp"
        android:textColor="@color/corPreto" />

    <TextView
        android:id="@+id/txtPrivacidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:gravity="center"
        android:text="@string/politica_privacidade"
        android:textColor="@color/corPreto" />

    <ImageView
        android:id="@+id/imgEeasterEgg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/easter_egg_descricao"
        android:src="@drawable/gohan"
        android:visibility="gone" />

</LinearLayout>